# z2p

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Justfile  spec.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yaml  general.yaml  scheduled-audit.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
