[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p"

[dependencies]
actix-web = "4.0.0-beta.13"
actix-http = "3.0.0-beta.14"
serde = "1"
config = "0.11"
sqlx = { version = "0.5", default-features = false, features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
