[package]
name = "z2p"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "z2p"

[dependencies]
actix-web = "4.0.0-beta.13"
actix-http = "3.0.0-beta.14"
chrono = "0.4"
config = "0.11"
serde = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5.0-beta.6"
tracing-bunyan-formatter = "0.3"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "0.8", features = ["v4"] }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
actix-rt = "2"
once_cell = "1"
reqwest = "0.11"
tokio = "1"
